--- a/css/main.css
+++ b/css/main.css
@@ -156,9 +156,9 @@ a:hover{
 .logoContainer.info.title{
   font-style: italic;
 }
-.logoContainer.info.title:hover{
+/* .logoContainer.info.title:hover{
   text-decoration: underline;
-}
+} */
 .logoContainer.info.click{
   width: 100%;
   text-align: center;
@@ -174,6 +174,7 @@ a:hover{
    z-index: -1;
    pointer-events: none;
    overflow: hidden;
+   opacity: 0.1;
 }
 .vimeo-wrapper iframe {
    width: 100vw;
